--- a/index.html
+++ b/index.html
@@ -333,6 +333,39 @@
         #theme-switch:checked+.relative>div:first-child {
             background-color: #94a3b8;
         }
+
+        /* --- Mobile Fixes --- */
+        @media (max-width: 640px) {
+            body {
+                align-items: flex-start;       /* Inhalt nicht "hochgedrückt" durch zu enge Höhe */
+                justify-content: center;
+                padding: 0.5rem;               /* Weniger Rand, damit nichts übersteht */
+                min-height: 100dvh;            /* dynamische Höhe auf Mobile-Browsern */
+            }
+
+            .main-card {
+                width: 100%;
+                max-width: 95vw;               /* verhindert horizontales Scrollen */
+                margin: auto;
+                box-sizing: border-box;
+            }
+
+            .game-grid {
+                width: 100%;
+                max-width: 90vw;
+                max-height: 90vw;
+                margin: 0 auto;
+            }
+
+            #start-button {
+                font-size: 1rem;
+                padding: 0.75rem 1.5rem;
+            }
+
+            #game-message {
+                font-size: 0.95rem;
+            }
+        }
     </style>
 </head>
 
