--- a/index.html
+++ b/index.html
@@ -379,15 +379,27 @@
 
         const initializeFirebase = async () => {
             try {
-                const appId = typeof __app_id !== 'undefined' ? __app_id : 'default-app-id';
-                const firebaseConfig = typeof __firebase_config !== 'undefined' ? JSON.parse(__firebase_config) : null;
+                // Import the functions you need from the SDKs you need
+                import { initializeApp } from "firebase/app";
+                import { getAnalytics } from "firebase/analytics";
+                // TODO: Add SDKs for Firebase products that you want to use
+                // https://firebase.google.com/docs/web/setup#available-libraries
 
-                if (!firebaseConfig) {
-                    console.warn("Firebase Config ist nicht verfügbar.");
-                    document.getElementById('high-score').textContent = 'N/A';
-                    return;
-                }
+                // Your web app's Firebase configuration
+                // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        const firebaseConfig = {
+            apiKey: "AIzaSyDdZqXYU6oR6yahRt4R5uyObashSScCyf0",
+            authDomain: "merkdings.firebaseapp.com",
+            projectId: "merkdings",
+            storageBucket: "merkdings.firebasestorage.app",
+            messagingSenderId: "50434008709",
+            appId: "1:50434008709:web:0f1583b896ec853f8b6bec",
+            measurementId: "G-ZXRVNCPQ4Y"
+        };
 
+            // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
                 app = initializeApp(firebaseConfig);
                 db = getFirestore(app);
                 auth = getAuth(app);
@@ -963,5 +975,6 @@
     </script>
 
 </body>
+
 
 </html>
