Fallback bug fix index.html

--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
               console.log("Lokaler Highscore aktiv.");
 }
         
-                const initialAuthToken = typeof __initial_auth_token !== 'undefined' ? __initial_auth_token : null;
+                //const initialAuthToken = typeof __initial_auth_token !== 'undefined' ? __initial_auth_token : null;
 
                 if (initialAuthToken) {
                     await signInWithCustomToken(auth, initialAuthToken);
@@ -1044,4 +1044,5 @@
 
 
 </html>
+
 
