--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 <body class="dark-mode">
 
     <!-- Theme Switch -->
-    <div class="absolute top-4 left-4 z-20">
+    <!-- <div class="absolute top-4 left-4 z-20">
         <label for="theme-switch" class="flex items-center cursor-pointer theme-switch-label">
             <input id="theme-switch" type="checkbox" class="sr-only">
             <div class="relative">
@@ -298,7 +298,7 @@
             </div>
             <span id="theme-label" class="ml-3 text-sm font-medium">Dark Mode</span>
         </label>
-    </div>
+    </div> -->
 
     <!-- Hauptcontainer -->
     <div class="w-full main-card p-6 rounded-xl border">
@@ -1124,6 +1124,7 @@
 
 
 </html>
+
 
 
 
