--- a/index.html
+++ b/index.html
@@ -1022,7 +1022,7 @@
         }
 
         // Theme-Switch
-        const setupThemeSwitch = () => {
+        /*const setupThemeSwitch = () => {
             const body = document.body;
             const switchInput = document.getElementById('theme-switch');
             const switchLabel = document.getElementById('theme-label');
@@ -1032,7 +1032,7 @@
                     body.classList.remove('light-mode');
                     body.classList.add('dark-mode');
                     switchInput.checked = false;
-                    switchLabel.textContent = 'Dark Mode';
+                    //switchLabel.textContent = 'Dark Mode';
                 } else {
                     body.classList.add('light-mode');
                     body.classList.remove('dark-mode');
@@ -1047,7 +1047,7 @@
                 setDarkMode(!switchInput.checked);
             });
 
-        };
+        };*/
 
         // Idle Animation
         function startIdleAnimation(colorClass = 'idle-soft-turquoise') {
@@ -1124,6 +1124,7 @@
 
 
 </html>
+
 
 
 
