--- a/index.html
+++ b/index.html
@@ -479,10 +479,10 @@
                   }
                 });*/
             
-              } catch (err) {
+              /*} catch (err) {
                   console.error("Fehler bei der Firebase-Initialisierung:", err);
                   setupLocalHighscore();
-                };
+                };*/
 
 
                 
@@ -1257,6 +1257,7 @@
 
 
 </html>
+
 
 
 
