--- a/index.html
+++ b/index.html
@@ -376,6 +376,7 @@
         let firestoreDocRef = null;
         let currentHighScore = 0;
         let isRestart = false;
+        let usingFirebase = false;
 
         setLogLevel('Debug');
 
@@ -600,6 +601,7 @@
                       document.getElementById('high-score').textContent = 0;
                       console.log("ℹ️ Kein Highscore gefunden.");
                     }
+
                   } catch (error) {
                     console.error("Fehler beim Laden des Highscores:", error);
                     setupLocalHighscore();
@@ -1257,6 +1259,7 @@
 
 
 </html>
+
 
 
 
