--- a/index.html
+++ b/index.html
@@ -284,6 +284,12 @@
             }
         }
     </style>
+
+    <!-- FIREBASE import -->
+  <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js"></script>
+
 </head>
 
 <body class="dark-mode">
@@ -1259,6 +1265,7 @@
 
 
 </html>
+
 
 
 
