--- a/index.html
+++ b/index.html
@@ -321,7 +321,9 @@
                 <p id="current-round" class="text-2xl font-bold text-title">1</p>
             </div>
             <div class="text-center">
-                <p class="text-xs font-semibold uppercase text-gray-400">Höchste Runde</p>
+                <span>Höchste Runde: <span id="high-score">0</span></span><br>
+                <span>Weltrekord: <span id="global-score">0</span></span>
+            <!--    <p class="text-xs font-semibold uppercase text-gray-400">Höchste Runde</p>  -->
                 <p id="high-score" class="text-2xl font-bold text-red-400">Laden...</p>
             </div>
         </div>
@@ -392,6 +394,7 @@
   let userId = null;
   let personalHighscore = 0;
   let globalHighscore = 0;
+    let isRestart = false;
 
   // ----------------------------
   // 🔥 Initialisierung
@@ -1037,6 +1040,7 @@
 
 
 </html>
+
 
 
 
